--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@web3-react/injected-connector": "^6.0.7",
     "ethers": "^5.7.2",
     "eventemitter3": "^5.0.1",
+    "lucide-react": "^0.468.0",
     "next": "15.0.0",
     "next-videos": "^1.4.1",
     "react": "^18.3.1",
